# daily_utils

./: build_and_push_to_pypi.sh  pyproject.toml
.github/workflows/: test.yml
src/: daily_utils.py
